// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package data_analysis;

// [END declaration]

// [START java_declaration]
option java_package = "com.data_analysis";
option java_outer_classname = "CustomerInfoRecord";
// [END java_declaration]

// [START messages]
message Customer {
  string name = 1;
  int32 id = 2;  // Unique ID number for this customer.
  string email = 3;
  
  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  message AddressType {
    string line1 = 1;
    string line2 = 2;
    string line3 = 3;
    string city = 4;
    string zipCode = 5;
    string state = 6;
  }
  
  AddressType address = 5;

}

// [END messages]
